--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,193 @@
+aiogram==2.21
+aiohttp==3.8.1
+aiojobs==1.0.0
+aioredis==2.0.1
+aiosignal==1.2.0
+alabaster==0.7.12
+alembic==1.7.4
+anytree==2.8.0
+appdirs==1.4.4
+APScheduler==3.6.3
+asgiref==3.5.2
+asttokens==2.0.5
+async-timeout==4.0.2
+attrs==21.4.0
+Automat==20.2.0
+Babel==2.9.1
+backcall==0.2.0
+bcrypt==3.2.2
 Beaker==1.11.0
+blinker==1.4
+breezy==3.2.2
+Brotli==1.0.9
+CacheControl==0.12.6
+cachetools==4.2.2
+certifi==2022.6.15
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+commonmark==0.9.1
+constantly==15.1.0
+contextlib2==21.6.0
+cryptography==37.0.4
+data==0.4
+dataclasses-json==0.5.7
+decorator==5.1.1
+Deprecated==1.2.13
+distlib==0.3.5
+distro==1.7.0
 Django==4.0.6
-telegram==0.0.1
+dnspython==2.2.1
+docopt==0.6.2
+docutils==0.19
+email-validator==1.2.0
+executing==0.9.1
+extras==1.0.0
+fastbencode==0.0.9
+fixtures==3.0.0
+Flask==2.1.3
+Flask-BabelEx==0.9.4
+Flask-Compress==1.12
+Flask-Gravatar==0.5.0
+Flask-Login==0.6.1
+Flask-Mail==0.9.1
+Flask-Migrate==3.1.0
+Flask-Paranoid==0.3.0
+Flask-Principal==0.4.0
+Flask-Security-Too==4.1.4
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+frozenlist==1.3.0
+funcsigs==1.0.2
+future==0.18.2
+greenlet==1.1.2
+gssapi==1.7.3
+gufw==22.4.0
+gunicorn==20.1.0
+html5lib==1.1
+hyperlink==21.0.0
+idna==3.3
+imagesize==1.4.1
+importlib-metadata==4.8.1
+incremental==21.3.0
+itsdangerous==2.1.2
+jaraco.context==4.1.1
+jaraco.functools==3.5.1
+jaraco.text==3.8.1
+jedi==0.18.1
+Jinja2==3.1.2
+keyutils==0.6
+ldap3==2.9
+libmsym==0.2.4
+logger==1.4
+loguru==0.6.0
+lxml==4.9.1
+Mako==1.1.6
+manjaro-sdk==0.1
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.3
+meson==0.63.0
+more-itertools==8.13.0
+msgpack==1.0.3
+multidict==6.0.2
+mypy-extensions==0.4.3
+netsnmp-python==1.0a1
+npyscreen==4.10.5
+nspektr==0.4.0
+ordered-set==4.0.2
+packaging==21.3
+pacman-mirrors==4.23.2
+paramiko==2.11.0
+parso==0.8.2
+passlib==1.7.4
+patiencediff==0.2.2
+pbr==5.9.0
+pep517==0.12.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.2.0
+platformdirs==2.5.1
+ply==3.11
+progress==1.6
+prompt-toolkit==3.0.30
+psutil==5.9.1
+psycopg2==2.9.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pwquality==1.4.4
+pyasn1==0.4.8
+pycairo==1.21.0
+pycparser==2.21
+pydantic==1.9.1
+Pygments==2.12.0
+PyGObject==3.42.2
+PyNaCl==1.4.0
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+PyQt5==5.15.7
+PyQt5-sip==12.11.0
+PySide6==6.3.1
+python-dateutil==2.8.2
+python-editor==1.0.4
+python-telegram-bot==13.13
+python-xlib==0.31
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+pyxdg==0.28
+PyYAML==6.0
+QtPy==2.1.0
+rados==2.0.0
+rbd==2.0.0
 redis==4.3.4
+requests==2.27.1
+resolvelib==0.8.1
+retrying==1.3.3
+rgw==2.0.0
+rich @ file:///build/python-rich/src/rich-12.5.1/dist/rich-12.5.0-py3-none-any.whl
+shiboken6==6.3.1
+simplejson==3.17.6
+six==1.16.0
+snowballstemmer==2.2.0
+speaklater==1.3
+Sphinx==5.1.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+SQLAlchemy==1.3.24
+sqlparse==0.4.2
+sshtunnel==0.4.0
+stack-data==0.3.0
+systemd-python==234
+TBB==0.2
+team==1.0
+telegram==0.0.1
+tenacity==8.0.1
+testtools==2.5.0
+toml==0.10.2
+tomli==2.0.1
+tornado==6.2
+traitlets==5.3.0
+trove-classifiers==2022.7.22
+Twisted==21.7.0
+typing-inspect==0.7.1
+typing_extensions==4.2.0
+tzdata==2022.1
+tzlocal==4.2
+udiskie==2.4.2
+urllib3==1.26.9
+validate-pyproject==0.9
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.1.2
+whitenoise==6.2.0
+wrapt==1.14.1
+WTForms==3.0.1
+yarl==1.7.2
+zipp==3.8.1
+zope.interface==5.4.0
