--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,32 @@
 version: '3.9'
 
 services:
-  app:
-    build:
-      context: .
-    command: >
-      sh -c "python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
-    ports:
-      - 8000:8000
-    volumes:
-      - ./app:/app
-      - ./data/web:/vol/web
-    environment:
-      - SECRET_KEY=devsecretkey
-      - DEBUG=1
-      - DB_HOST=db
-      - DB_NAME=psychobot
-      - DB_USER=postgresql
-      - DB_PASS=postgresql
-    depends_on:
-      - db
+#  app:
+#    build:
+#      context: .
+#    command: >
+#      sh -c "python manage.py migrate &&
+#             python manage.py runserver 0.0.0.0:8000"
+#    ports:
+#      - 8000:8000
+#    volumes:
+#      - ./app:/app
+#      - ./data/web:/vol/web
+#    environment:
+#      - SECRET_KEY=devsecretkey
+#      - DEBUG=1
+#      - DB_HOST=db
+#      - DB_NAME=config
+#      - DB_USER=postgresql
+#      - DB_PASS=postgresql
+#    depends_on:
+#      - db
 
   db:
     image: postgres:13-alpine
+    ports:
+      - "5432:5432"
     environment:
-      - POSTGRES_DB=psychobot
+      - POSTGRES_DB=config
       - POSTGRES_USER=postgresql
       - POSTGRES_PASSWORD=postgresql
