--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,140 @@
+aiogram==2.24
+aiohttp==3.8.3
+aiojobs==1.1.0
+aioredis==2.0.1
+aiosignal==1.3.1
+APScheduler==3.6.3
+arrow==1.2.3
+asgiref==3.6.0
+async-timeout==4.0.2
+asyncio-redis==0.16.0
+asyncpg==0.27.0
+attrs==22.1.0
+Babel==2.9.1
+bcrypt==3.2.0
 Beaker==1.11.0
-Pydantic
-psycopg2-binary
+beautifulsoup4==4.11.1
+blessed==1.19.1
+blinker==1.4
+Brlapi==0.8.4
+cachetools==4.2.2
+certifi==2022.6.15
+chardet==4.0.0
+charset-normalizer==2.1.1
+click==8.0.3
+colorama==0.4.5
+command-not-found==0.3
+cryptography==3.4.8
+cupshelpers==1.0
+databases==0.7.0
+dbus-python==1.2.18
+defer==1.0.6
+Deprecated==1.2.13
+distlib==0.3.5
+distro==1.7.0
+distro-info==1.1+ubuntu1
+dj-database-url==1.2.0
 Django==4.0.6
-telegram==0.0.1
-redis==4.3.4
-python-telegram-bot==13.13
+django-picklefield==3.1
+django-q==1.3.9
+docker==6.0.1
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+duplicity==0.8.22
+exceptiongroup==1.0.4
+fasteners==0.17.3
+filelock==3.7.1
+frozenlist==1.3.3
+future==0.18.2
+greenlet==2.0.1
+gunicorn==20.1.0
+httplib2==0.20.4
+idna==3.4
+importlib-metadata==4.6.4
+iniconfig==1.1.1
+jeepney==0.8.0
+jsonschema==3.2.0
+keyring==23.8.2
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+loguru==0.6.0
+louis==3.22.0
+magic-filter==1.0.9
+Mako==1.1.3
+MarkupSafe==2.0.1
+monotonic==1.6
+more-itertools==8.10.0
+multidict==6.0.4
+netaddr==0.8.0
+netifaces==0.11.0
+oauthlib==3.2.0
+olefile==0.46
+packaging==22.0
+paramiko==2.10.4
+pexpect==4.8.0
 Pillow==9.2.0
-dj_database_url
-whitenoise
-gunicorn
+pipenv==11.9.0
+platformdirs==2.5.2
+pluggy==1.0.0
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+py==1.10.0
+pycairo==1.20.1
+pycups==2.0.1
+pydantic==1.10.2
+Pygments==2.12.0
+PyGObject==3.42.2
+PyJWT==2.4.0
+PyNaCl==1.5.0
+pyparsing==3.0.7
+pyrsistent==0.19.2
+pytest==7.1.2
+python-apt==2.3.0+ubuntu2
+python-dateutil==2.8.1
+python-debian==0.1.46
+python-dotenv==0.21.0
+python-telegram-bot==13.13
+pytz==2022.7
+pytz-deprecation-shim==0.1.0.post0
+pyxdg==0.27
+PyYAML==5.4.1
+redis==3.5.3
+reportlab==3.6.11
+requests==2.28.1
+schedule==1.1.0
+SecretStorage==3.3.3
+six==1.16.0
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.46
+sqlparse==0.4.3
+systemd-python==235
+telebot==0.0.4
+telegram==0.0.1
+texttable==1.6.7
+tomli==2.0.1
+tornado==6.2
+typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
+ubuntu-advantage-tools==27.11.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.9
+usb-creator==0.3.7
+virtualenv==20.16.3+ds
+virtualenv-clone==0.3.0
+wadllib==1.3.6
+wcwidth==0.2.5
+websocket-client==0.59.0
+whitenoise==6.2.0
+wrapt==1.14.1
+xdg==5
+xkit==0.0.0
+yarl==1.8.2
+yookassa==2.3.3
+zipp==1.0.0
