--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,17 @@ services:
       - POSTGRES_DB=config
       - POSTGRES_USER=postgresql
       - POSTGRES_PASSWORD=postgresql
+
+  bot:
+    build:
+      context: .
+    command: >
+      sh -c "python3 ./aiogramBot/main.py"
+    ports:
+      - 6432:6432
+    volumes:
+      - ./aiogramBot:/aiogramBot
+    environment:
+     - DATABASE_URL=postgresql://postgresql:postgresql@0.0.0.0:5432/config
+    depends_on:
+      - db
