--- a/requirements.txt
+++ b/requirements.txt
@@ -88,7 +88,6 @@ pytz-deprecation-shim==0.1.0.post0
 pyxdg==0.27
 PyYAML==5.4.1
 redis==3.5.3
-reportlab==3.6.11
 requests==2.28.1
 schedule==1.1.0
 SecretStorage==3.3.3
@@ -97,6 +96,7 @@ soupsieve==2.3.2.post1
 SQLAlchemy==1.4.46
 sqlparse==0.4.3
 telegram==0.0.1
+telebot
 urllib3==1.26.9
 virtualenv==20.20.0
 virtualenv-clone==0.3.0
