--- a/rabbit/Dockerfile
+++ b/rabbit/Dockerfile
@@ -1,9 +1,9 @@
 FROM rabbitmq
 
 # Define environment variables.
-ENV RABBITMQ_USER psycho
-ENV RABBITMQ_PASSWORD password
-ENV RABBITMQ_VHOST password
+ENV RABBITMQ_USER 'psycho'
+ENV RABBITMQ_PASSWORD 'password'
+ENV RABBITMQ_VHOST 'password'
 
 ADD init.sh /init.sh
 RUN chmod +x /init.sh
