--- a/apis/requirements.txt
+++ b/apis/requirements.txt
@@ -9,6 +9,7 @@ databases==0.6.1
 dnspython==2.2.1
 exceptiongroup==1.0.1
 fastapi==0.85.2
+aio-pika==9.1.4
 greenlet==2.0.0
 gunicorn==20.1.0
 h11==0.12.0
@@ -48,3 +49,4 @@ uvicorn==0.18.3
 uvloop==0.17.0
 watchfiles==0.18.0
 websockets==10.4
+dependency-injector==4.41.0
