--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,12 +21,18 @@ services:
 #      - DB_PASS=postgresql
 #    depends_on:
 #      - db
-  bot_consumer:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "1097:1097"
+
+#  bot_consumer:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile_consumer_bot
+#    ports:
+#      - "1097:1097"
+#    restart: on-failure
+#    depends_on:
+#      - rabbit
+#    links:
+#      - rabbit
 #
 #  rabbit:
 #    build:
@@ -34,26 +40,51 @@ services:
 #      dockerfile: Dockerfile
 #    ports:
 #      - "5672:5672"
-#
-#  db:
-#    image: postgres:13-alpine
-#    ports:
-#      - "5432:5432"
-#    environment:
-#      - POSTGRES_DB=config
-#      - POSTGRES_USER=postgresql
-#      - POSTGRES_PASSWORD=postgresql
 
-#  bot:
+#  redis:
+#    build:
+#      context: redis_
+#      dockerfile: Dockerfile
+#    volumes:
+#      - "./tmp/redis_data:/data"
+#    ports:
+#      - "6379:6379"
+
+  db:
+    image: postgres:13-alpine
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_DB=config
+      - POSTGRES_USER=postgresql
+      - POSTGRES_PASSWORD=postgresql
+#
+#  psychologists_apis:
 #    build:
 #      context: .
-#    command: >
-#      sh -c "python3 ./aiogramBot/main.py"
+#      dockerfile: Dockerfile_apis
 #    ports:
-#      - 6432:6432
-#    volumes:
-#      - ./aiogramBot:/aiogramBot
-#    environment:
-#     - DATABASE_URL=postgresql://postgresql:postgresql@0.0.0.0:5432/config
+#      - 8001:8001
+#    command: bash -c "uvicorn app.main:app --host 0.0.0.0 --port 8001"
+#    restart: on-failure
 #    depends_on:
+#      - rabbit
+#      - redis
+#      - db
+#    links:
+#      - rabbit
+#      - redis
+#      - db
+
+
+#  psychologists_bot:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile_psychologists_bot
+#    restart: on-failure
+#    depends_on:
+#      - redis
+#      - db
+#    links:
+#      - redis
 #      - db
