--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,7 +95,7 @@ services:
       dockerfile: Dockerfile_admin_panel
     ports:
       - 8000:8000
-    command: bash -c "python3 manage.py runserver"
+    command: python3 manage.py runserver 0.0.0.0:8000
     restart: on-failure
     depends_on:
       - db
