--- a/Dockerfile_psychologists_bot
+++ b/Dockerfile_psychologists_bot
@@ -3,6 +3,8 @@ FROM python:3.10
 WORKDIR /app
 
 RUN apt-get update && apt-get install libpq-dev python3-dev -y
+RUN  pip install --upgrade pip
+RUN  pip install umap-learn bechdelai==0.0.1a2
 
 COPY psychologists_bot/requirements.txt ./requirements.txt
 RUN pip install -r ./requirements.txt
