--- a/Dockerfile_admin_panel
+++ b/Dockerfile_admin_panel
@@ -16,4 +16,9 @@ COPY admin_panel /app/admin_panel
 
 WORKDIR /app/admin_panel/app
 
+# Create superuser during image build
+RUN python manage.py shell -c "from django.contrib.auth import get_user_model; User = get_user_model(); \
+User.objects.filter(email='admin@gmail.com').exists() or \
+User.objects.create_superuser('admin', 'admin@gmail.com', 'admin')"
+
 EXPOSE 8000
