--- a/Dockerfile_admin_panel
+++ b/Dockerfile_admin_panel
@@ -16,6 +16,9 @@ COPY admin_panel /app/admin_panel
 
 WORKDIR /app/admin_panel/app
 
+RUN python manage.py makemigrations --noinput
+RUN python manage.py migrate --noinput
+
 # Create superuser during image build
 RUN python manage.py shell -c "from django.contrib.auth import get_user_model; User = get_user_model(); \
 User.objects.filter(email='admin@gmail.com').exists() or \
